# fastapi-template

./: Dockerfile  mise.toml  pyproject.toml
.github/workflows/: publish-ghcr.yaml
src/: main.py
tests/: test_main.py
